crates/keron-lang/tests/corpus/errors/check/string_in_arithmetic.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `+` requires `Int` or `Double` operands, found `String` and `Int`
  --> 1:9
  |
1 | val a = "hello" + 1
  |         ^^^^^^^^^^^
